# big-brother-ai-tv-show

./: .dockerignore  .env.example  .gitignore  Makefile  NOTICE  README.md  docker-compose.yml
neural-house/apps/api/: Dockerfile  alembic.ini  pyproject.toml
neural-house/apps/api/alembic/: env.py
neural-house/apps/api/alembic/versions/: 20260323_0001_initial_foundation.py  20260323_0002_audition_sessions.py  20260323_0003_relationships.py  20260323_0004_character_skin_fields.py  20260323_0005_simulation_core_layers.py
neural-house/apps/api/app/: __init__.py  main.py  seed.py
neural-house/apps/api/app/core/: config.py
neural-house/apps/api/app/db/: session.py
neural-house/apps/api/app/models/: base.py  entities.py
neural-house/apps/api/app/repositories/: contestants.py
neural-house/apps/api/app/schemas/: article.py  audition.py  common.py  contestant.py  live.py  persona_card.py  season.py  simulation_core.py  vip.py
neural-house/apps/api/app/services/: audition.py  confessionals.py  highlights.py  house_director.py  live_show.py  memory.py  newsroom.py  persona_generator.py  relationships.py  simulation.py  simulation_state.py  vip.py
neural-house/apps/api/neural_house_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
neural-house/apps/api/tests/: conftest.py  test_auditions_and_simulation.py  test_core_layers.py  test_simulation_vip_newsroom.py
neural-house/apps/worker/: Dockerfile  pyproject.toml
neural-house/apps/worker/app/: __init__.py  worker.py
neural-house/apps/worker/neural_house_worker.egg-info/: SOURCES.txt  requires.txt
(+103 files in other folders)
